hphp/hack/test/typecheck/reified_generics/newable_targ_final_constructor.php.exp
File "newable_targ_final_constructor.php", line 9, characters 32-32:
The type parameter T has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final, or it must have the <<__ConsistentConstruct>> attribute or extend a class that has it. No constraints are valid newable classes (Typing[4308])
